lustre/osc/osc_object.c
@@ -282,13 +282,15 @@ static int osc_object_fiemap(const struct lu_env *env, struct cl_object *obj,
 			       LDLM_FL_BLOCK_GRANTED | LDLM_FL_LVB_READY,
 			       &resid, LDLM_EXTENT, &policy,
 			       LCK_PR | LCK_PW, &lockh);
+	fmkey->lfik_oa.o_valid |= OBD_MD_FLFLAGS;
 	if (mode) { /* lock is cached on client */
+		fmkey->lfik_oa.o_flags &= ~OBD_FL_SRVLOCK;
 		if (mode != LCK_PR) {
 			ldlm_lock_addref(&lockh, LCK_PR);
 			ldlm_lock_decref(&lockh, LCK_PW);
 		}
+		CFS_FAIL_TIMEOUT(OBD_FAIL_OSC_FIEMAP, cfs_fail_val);
 	} else { /* no cached lock, needs acquire lock on server side */
-		fmkey->lfik_oa.o_valid |= OBD_MD_FLFLAGS;
 		fmkey->lfik_oa.o_flags |= OBD_FL_SRVLOCK;
 	}
 
